# visual-album-studio

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md
.codex/: codex-os.manifest.json  setup.sh  verify.commands
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
app/: project.godot
docs/: 00-readme.md  01-pinned-decisions.md  02-prd.md  03-requirements-v2.md  03-requirements.md  04-system-architecture.md  05-dependency-graph.md  06-repo-structure.md  07-module-contracts.md  08-data-model-sqlite.md  09-audio-engine.md  10-visual-engine.md  11-export-render-pipeline.md  12-asset-library-and-templates.md  13-youtube-integration.md  14-automation-batch-remix.md  15-analytics-revenue.md  16-security-privacy.md  17-test-verification.md  18-traceability-matrix-v2.md  18-traceability-matrix.md  19-risk-register.md  20-phase-blueprint-v2.md  20-phase-blueprint.md  21-phases-04-05-06-needs.md  22-project-closeout-report.md  23-post-v1-backlog.md  24-risk-revalidation-cadence.md  25-ui-ux-standards-v2.md  26-v2-test-verification.md  27-v2-methodology-and-tooling.md  28-v2-cloud-region-and-residency.md  29-v2-train-execution-board.md  30-security-hardening-backlog.md  31-v2-train1-release-runbook.md  32-v2-train1-evidence-pack.md  33-v2-closeout-report.md  (+14 more)
worker/: pyproject.toml
worker/tests/: test_worker_smoke.py
worker/vas_audio_worker/: __init__.py  cli.py
worker/vas_audio_worker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+303 files in other folders)
