[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vas-audio-worker"
version = "0.1.0"
description = "Visual Album Studio audio analysis worker"
requires-python = ">=3.11"
dependencies = [
  "numpy==2.4.3",
  "scipy==1.14.1",
  "librosa==0.10.2.post1"
]

[project.scripts]
vas-audio-worker = "vas_audio_worker.cli:main"
